--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "eightpoints/guzzle-bundle": "^7.5",
+        "metaer/curl-wrapper-bundle": "^1.0",
+        "overblog/graphql-bundle": "^0.11.12",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
@@ -26,8 +29,9 @@
         "symfony/yaml": "4.2.*"
     },
     "require-dev": {
+        "overblog/graphiql-bundle": "^0.1.2",
         "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.11",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*",
         "symfony/web-server-bundle": "4.2.*"
